# datamint-python-api

./: .gitignore  README.md  logging_dev.yaml  pyproject.toml  requirements.txt
.github/workflows/: documentation.yaml  release_pypi.yaml  run_test.yaml
DatamintAPI/: _api_handler.py  dataset.py
assets/: pipeline-demo.tape  pipeline_demo_mock.py
datamint/: __init__.py  __main__.py  configs.py  default_project.py  exceptions.py  types.py
datamint/api/: __init__.py  base_api.py  client.py  entity_base_api.py
datamint/apihandler/: annotation_api_handler.py  base_api_handler.py  root_api_handler.py
datamint/client_cmd_tools/: datamint_config.py  datamint_example.py  datamint_inference.py  datamint_init.py  datamint_train.py  datamint_upload.py
datamint/dataset/: __init__.py  annotation.py  annotation_processor.py  base.py  base_dataset.py  dataset.py  detection_dataset.py  factory.py  image_dataset.py  multiframe_dataset.py  sliced_dataset.py  sliced_video_dataset.py  split_result.py  video_dataset.py  volume_dataset.py
datamint/entities/: __init__.py  annotation.py  annotation_worklist.py  base_entity.py  cache_manager.py  deployjob.py  inferencejob.py  project.py  project_resource_split.py  resource.py  sliced_resource.py  sliced_resource_base.py  sliced_video_resource.py  user.py
datamint/examples/: __init__.py  _common.py  _download.py  bccd_dataset.py  busi_dataset.py  example_projects.py  fracatlas_dataset.py  synapse_dataset.py
datamint/experiment/: experiment.py
datamint/lightning/: __init__.py  datamintdatamodule.py  datamodule.py
datamint/mlflow/: __init__.py  env_utils.py  env_vars.py  store_utils.py
datamint/utils/: annotation_agreement.py  collection_utils.py  env.py  nifti_utils.py  torchmetrics.py  (+2 more)
datamintapi/: __init__.py  _api_handler.py  annotation_api_handler.py  api_handler.py  base_api_handler.py  configs.py  dataset.py  dicom_utils.py  logging.yaml  root_api_handler.py
dev/: DAT-991-example-data-plan.md  README.md  publish_release.sh
docs/: requirements.txt
examples/: experiment_traintest.py  experiment_traintest_classifier.py  experiment_traintest_segmentation.py
notebooks/: README.md  build_dataset_tutorial.ipynb  dataset_loading.ipynb  deploy_model_demo.ipynb  experiment_segmentation_lightning.ipynb  exploring_data_tutorial.ipynb  geometry_annotations.ipynb  mlflow_manual_logging.ipynb  mlflow_simple_training.ipynb  patient_wise_split.ipynb  upload_annotations.ipynb  upload_data.ipynb  upload_model_segmentations.ipynb  volume_dataset_tutorial.ipynb
sonance/: SonanceDataset.py  __init__.py
tests/: conftest.py  test__api_handler.py  test_annotation_agreement.py  test_annotations_api.py  test_annotationsets_api.py  test_api_handler.py  test_auto_config_mlflow.py  test_collection_utils.py  test_configs.py  test_datamint_config.py  test_datamodule_collate.py  test_dataset_factory.py  test_dataset_patient_split.py  test_datasetsinfo_api.py  test_deploy_model_api.py  test_detection_dataset.py  test_detection_trainer.py  test_dicom_utils.py  test_entity_pickling.py  test_imports.py  test_inference_api.py  test_nnunet_data_export.py  test_nnunet_data_import.py  test_nnunet_inference_model.py  test_nnunet_integration.py  test_nnunet_trainer.py  test_nnunet_trainer_bridge.py  test_projects_api.py  test_resource_subclasses.py  test_resources_api.py  test_upload_validation.py  test_users_api.py  test_yolox_module.py  test_yolox_trainer.py
(+168 files in other folders)
