[tool.poetry]
name = "sonance"
version = "0.1.0"
description = "A library for loading Sonance datasets into Pytorch"
authors = [" "] # TODO: Add authors
readme = "README.md"
# license = "Proprietary" # https://python-poetry.org/docs/pyproject/

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "*"
torch = ">=1.2.0"
tqdm = "^4.0.0"
requests = "^2.0.0"
pyyaml = ">=5.0.0"
pydicom = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"