[tool.poetry]
name = "DatamintAPI"
version = "0.6.5"
description = "A library for loading Datamint datasets into Pytorch"
authors = ["Sonance Team"]
readme = "README.md"
# license = "Proprietary" # https://python-poetry.org/docs/pyproject/
include = [{ path = "datamintapi/logging.yaml", format = ["sdist", "wheel"] }]

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = "^3.9"
numpy = "*"
# exclude version 2.3.0 due to a bug in the library
torch = ">=1.2.0, !=2.3.0"
torchvision = "*"
tqdm = "^4.0.0"
requests = "^2.0.0"
pyyaml = ">=5.0.0"
pydicom = "^3.0.0"
aiohttp = "^3.0.0"
nest-asyncio = "^1.0.0"
humanize = "^4.0.0"
rich = ">=10.0.0"
nibabel = ">=4.0.0"
opencv-python = ">=4.0.0"
Deprecated = ">=1.2.0"
pydantic = "^2.0.3"
platformdirs = "^4.0.0"
# Extra dependencies for docs
sphinx = { version = ">=5.0", optional = true }
sphinx_rtd_theme = { version = ">=2.0.0", optional = true }
sphinx-tabs = { version = ">=3.0.0", optional = true }
setuptools = { version = ">=57.0", optional = true }
# Extra dependencies for dev
pytest = { version = "^7.0.0", optional = true }
pytest-cov = { version = "^4.0.0", optional = true }
responses = { version = "^0.20.0", optional = true }
aioresponses = { version = "^0.7.0", optional = true }


[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
responses = "^0.20.0"
aioresponses = "^0.7.0"

# Extra dependencies for docs
[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-tabs", "setuptools"]
dev = ["pytest", "pytest-cov", "responses", "aioresponses"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
datamint-upload = 'datamintapi.client_cmd_tools.datamint_upload:main'
datamint-config = 'datamintapi.client_cmd_tools.datamint_config:main'
